# python-binary-auto-release

./: README.md  config.example.yaml  gen_certificate.sh  pyproject.toml  test.py
.github/workflows/: release.yml
